Fixing blurred zoom #56
Fixing 28.8px blurred zoom to 36px along with sorting properties alphabetically.

--- a/src/app/shared/components/icon-button/icon-button.component.scss
+++ b/src/app/shared/components/icon-button/icon-button.component.scss
@@ -4,8 +4,8 @@
 
 .icon-button:hover {
   cursor: pointer;
-  transform: scale(1.2);
   fill: #b98181;
+  transform: scale(1.5);
 }
 
 .light {
@@ -17,11 +17,11 @@
 }
 
 .size-small {
-  width: 25px;
   height: 25px;
+  width: 25px;
 }
 
 .size-normal {
-  width: 29px;
   height: 29px;
+  width: 29px;
 }
